# Backend/src/routes/user.routes.js
@@ -1,6 +1,5 @@
 import express from "express";
 import {
-  getProfile,
   login,
   registerUser,
 } from "../controllers/user.controller.js";
@@ -8,10 +7,8 @@ import {
   validateLogin,
   validateUserRegistration,
 } from "../validators/user.validator.js";
-import authenticate from "../middlewares/auth.middleware.js";
 const router = express.Router();
 
-router.get("/profile", authenticate, getProfile);
 
 router.post("/register", validateUserRegistration, registerUser);
 
