# Backend/swagger.json
@@ -158,84 +158,6 @@
           }
         }
       }
-    },
-    "/users/voter/register": {
-      "post": {
-        "tags": ["USER OPERATIONS"],
-        "summary": "Register as a voter",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "type": "object",
-            "consumes": "application/json",
-            "properties": {
-              "firstname": {
-                "type": "string",
-                "required": "true"
-              },
-              "lastname": {
-                "type": "string",
-                "required": "true"
-              },
-              "phone": {
-                "type": "string",
-                "required": "true"
-              },
-              "email": {
-                "type": "string",
-                "required": "true"
-              },
-              "nationalId": {
-                "type": "string",
-                "required": "true"
-              },
-              "password": {
-                "type": "string",
-                "required": "true"
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Invalid data"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      }
-    },
-    "/users/profile": {
-      "get": {
-        "tags": ["USER OPERATIONS"],
-        "summary": "Get user profile",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Invalid data"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      }
     }
   }
 }
